# network_device_api

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
network_device_api/: connect_device.py  main.py
tests/: test_integration.py  test_unit.py
