[tool.poetry]
name = "network-device-api"
version = "0.1.0"
description = ""
authors = ["nonstdout <csalisbury@rocketmail.com>"]
readme = "README.md"
packages = [{include = "network_device_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
uvicorn = "^0.20.0"
scrapli = {extras = ["genie"], version = "^2022.7.30.post1"}


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
mock = "^5.0.0"
scrapli-replay = "^2022.7.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
